static/less/forms.less
/*
* forms.less
*
* Inputs, Buttons, Dropdowns
*/

*:focus {
  outline: none !important;
  .box-shadow(none) !important;
}


// Links

a {
  .sl-sb;
  color: @persianBlue60;
  .transition(color);
  .transition-duration(200ms);

  &.sm {
    .sl-sm-sb;
    color: @persianBlue60;
  }

  &.light {
    color: @persianBlue40;

    &:hover {
      color: @persianBlue20;
    }
  }

  &:visited {
    color: @persianBlue60;
  }

  &:hover {
    cursor: pointer;
    color: @persianBlue100;
    text-decoration: none;
  }

  &:active {
    color: @persianBlue100;
  }
}

.btn, button {
  .sl-sb;
  color: @white;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  line-height: 1em;
  padding: 8px 18px;
  border-radius: 0;
  border: 1px solid @persianBlue60;
  background-color: @persianBlue60;
  .transition("background-color, border-color");
  .transition-duration(200ms);

  &:not(.close) {
    min-width: 135px;
  }

  &:visited {
    color: @white;
  }

  &:hover {
    border: 1px solid @persianBlue100;
    background-color: @persianBlue100;
    color: @white;
    text-decoration: none;
    cursor: pointer;
  }

  &:focus {
    color: @white;
    .box-shadow(none);
  }

  &.secondary {
    color: @gray4;
    border-color: @gray2;
    background-color: @gray1;

    &:visited {
      color: @gray4;
    }

    &:hover {
      color: @gray4;
      background-color: @white;
      border-color: @gray2;
    }
  }

  &.sm {
    font-size: 12px;
    line-height: 14px;
    padding: 5px 15px;
    color: @white;
    min-width: 80px;

    &.secondary {
      color: @gray4;
    }
  }

  &.btn-link {
    .sl-sm-sb;
    background-color: transparent;
    border: 3px solid transparent;
    color: @persianBlue100;
    display: inline-block;
    letter-spacing: 0;
    height: 30px;
    padding: 0 13px;
    text-align: center;
    text-transform: none;

    &:hover {
      background-color: inherit;
      color: @black !important;
    }

    [class^="icon-"] {
      color: @persianBlue60;

      &:hover {
        color: @persianBlue100;
      }
    }
  }

  &.special {
    .sl-sb;
    color: @white;
    font-size: 20px;
    line-height: 28px;
    padding: 10px 30px;
  }

  &.disabled, button[disabled] {
    color: @white;
    border-color: @persianBlue20;
    background-color: @persianBlue20;
  }
}

.btn-link {
  height: 30px;
  padding-left: 20px;

  i {
    vertical-align: text-top;
  }
}


// Dropdowns

.dropdown {
  display: block;
  width: auto;

  .dropdown-toggle {
    display: block;
    text-decoration: none;
    .transition("background-color, color");
    .transition-duration(200ms);

    span {
      display: inline-block;
      text-overflow: ellipsis;
      white-space: nowrap;
      overflow: hidden;
      line-height: normal;
    }

    .caret {
      border-width: 5px;
      margin-top: 8px;
      margin-left: 2px;
      vertical-align: top;
    }

    .icon {
      float: left;
      font-size: 16px;
      color: @white;
      margin-right: 8px;
    }
  }

  &.right {
    float: right;
  }

  .dropdown-menu {
    .sl;
    position: absolute;
    padding: 5px 0;
    margin: 0;
    border: 0;
    border-radius: 0;
    background: @white;
    text-align: left;
    .box-shadow(0px, 1px, 4px, @gray2);

    > li {
      margin: 0;
      padding: 0;
      list-style: none;

      &.group {
        border-bottom: 1px solid @gray2;
        padding-bottom: 10px;

        &:last-of-type {
          border-bottom: none;
        }
      }

      h4 {
        margin: 10px 0;
        padding: 0 10px;
      }

      > ul {
        padding: 0;

        > li {
          margin: 0;
          padding: 0;
          list-style: none;
        }
      }
    }

    a {
      .sl;
      color: @gray6;
      display: block;
      padding: 10px 15px;

      &:hover {
        text-decoration: none;
        background: @persianBlue10;
        color: @black;
        cursor: pointer;
      }
    }

    .none {
      .sl;
      color: @gray4;
      padding: 10px 20px;
      font-style: italic;
    }

    &.right {
      right: 0;
      left: auto;

      &::before {
        left: auto !important;
        right: 9px;
      }

      &::after {
        left: auto !important;
        right: 10px;
      }
    }
  }

  &.nav {
    margin: 0;
    height: 70px;
    width: 180px;
    background-color: @gray7;
    border-bottom: 1px solid @gray6;

    .dropdown-toggle {
      height: 100%;

      span {
        .sl-sb;
        color: @white;
        line-height: 17px;
        padding: 25px 0 0 8px;
        max-width: 120px;
      }

      .caret {
        border-top-color: @white;
        margin: 30px 5px;
      }

      &:active {
        outline: 0;
      }
    }

    &.open, .dropdown-toggle:hover {
      background-color: @gray9;

      .dropdown {
        background-color: @white;
      }

      span {
        color: @white;
      }

      .caret {
        border-top-color: @white;
      }
    }

    .dropdown-menu {
      min-width: 180px;
      font-size: 15px;
    }
  }

  &.action {
    height: 34px;

    .dropdown-toggle {
      padding: 5px 5px 0px;
      border: 1px solid @gray2;

      span {
        .sl;
        line-height: 23px;
        border-right: 1px solid @gray2;
        padding: 0 10px 0 5px;
      }
      .caret {
        border-width: 5px;
        margin-left: 1px;
        border-top-color: @gray4;
      }

      &:active {
        outline: 0;
      }
    }

    &.open, .dropdown-toggle:hover {
      background-color: @gray1;
    }
  }

  &.borderless {
    height: 34px;

    .dropdown-toggle {
      padding: 5px 5px 0 0;

      i {
        color: @gray6;
        vertical-align: text-bottom;
      }

      span {
        .sl-sb;
        color: @gray6;
        padding: 0 2px;
        max-width: none;
      }

      .caret {
        margin-left: -1px;
        margin-top: 7px;
        border-top-color: @gray6;
      }

      &:active {
        outline: 0;
      }
    }

    &.open, .dropdown-toggle:hover {
      i, span {
        color: @black;
      }
      .caret {
        border-top-color: @black;
      }
    }
  }

  &.filter {
    display: inline-block;
    vertical-align: middle;
    height: 100%;

    .dropdown-toggle {
      color: @gray5;
      padding: 0 10px;

      &.active {
        span {
          color: @black;
        }
      }

      span {
        &:extend(table.items th > span);
        line-height: 36px !important;
        vertical-align: middle;
      }

      .caret {
        border-top-color: @gray6;
        margin-top: 15px;
        margin-left: 0;
      }
    }

    &.open, &:hover {
      background-color: @gray2;

      .dropdown-toggle {
        span {
          color: @black;
        }

        .caret {
          border-top-color: @black;
        }
      }

      .dropdown-menu {
        .active {
          color: @black;
        }
      }
    }
  }

  &.date {
    .dropdown-toggle {
      height: 44px;
      padding: 5px 5px;
      border: 1px solid @gray2;

      span {
        padding: 0 5px;

        .date {
          .sl;
        }

        .time {
          .sl-sm;
          color: @gray4;
          line-height: normal;
        }

        &.em-dash {
          .sl;
          vertical-align: top;
          padding: 0;
        }

        &:last-of-type {
          padding-right: 10px;
          border-right: 1px solid @gray2;
        }
      }

      .caret {
        border-width: 4px;
        margin-top: 14px;
        margin-left: 1px;
        border-top-color: @gray4;
      }
    }

    &.open, .dropdown-toggle:hover {
      background-color: @gray1;
    }

    .dropdown-menu {
      min-width: 230px;
    }
  }
}


// Inputs

@inputFullWidth: 350px;
@inputPadding: 5px;
@inputHeight: auto;

form {
  margin: 0;

  legend {
    margin-bottom: 0;
  }

  label {
    .sl-sm-sb;
    margin-bottom: 0;

    &:after {
      content: ':';
      padding-right: 3px;
    }

    &.inline {
      display: inline;
    }
  }

  select,
  textarea,
  input[type="text"],
  input[type="password"],
  input[type="datetime"],
  input[type="datetime-local"],
  input[type="date"],
  input[type="month"],
  input[type="time"],
  input[type="week"],
  input[type="number"],
  input[type="email"],
  input[type="url"],
  input[type="search"],
  input[type="tel"],
  input[type="color"] {
    .sl-md;
    border: 1px solid @gray2;
    border-radius: 0;
    width: @inputFullWidth / 2;
    padding: @inputPadding 8px;
    height: @inputHeight;
    margin-bottom: 0;
    .box-shadow(none);

    &.full {
      width: @inputFullWidth - @inputPadding * 2;
    }

    &[disabled] {
      background-color: @white;
      color: @gray2;
    }
  }

  input[type="radio"] {
    margin: 0;
  }

  .radio-label {
    .sl;
    display: inline;
    padding: 0px 15px 0px 5px;
    &:after {
      content: '';
      padding-right: 0px;
    }
  }

  .input-append,
  .input-prepend {
    .add-on {
      .sl-md;
      color: @white;
      height: 36px;
      min-width: 16px;
      line-height: 1.7;
      border-radius: 0;
      background-color: @black;
      border-color: @black;

      &:first-child {
        .border-radius(0);
      }
    }
  }
}

